Changes to posts

--- a/_posts/2023-06-7-neuro.md
+++ b/_posts/2023-06-7-neuro.md
@@ -1,5 +1,5 @@
 ---
-title: Remove neuro orientation
+title: Expanding Orientation - From Neuroscience to General Focus
 layout: post
 post-image: "https://cdn.pixabay.com/photo/2020/12/08/16/58/brain-5814971_640.jpg"
 description: The focal point of our recent efforts has been to make the code more robust and accommodating for various types of data. The first issue we addressed centered around this goal. We recognized the importance of enabling users to work with different data forms, beyond the specific use case of neurons that was previously targeted. This expanded capability opens up new avenues for application and empowers a wider user base.
